syntax = "proto3";

option go_package = "./";

package api;

service Balancer {
  rpc NewArea(NewAreaRequest) returns (NewAreaResponse) {}
  rpc Set(BalancerSetRequest) returns (BalancerSetResponse) {}
  rpc SetToArea(BalancerSetToAreaRequest) returns (BalancerSetResponse) {}
  rpc Get(BalancerGetRequest) returns (BalancerGetResponse) {}
  rpc GetFromArea(BalancerGetFromAreaRequest) returns (BalancerGetResponse) {}
  rpc Connect(ConnectRequest) returns (ConnectResponse) {}
  rpc Disconnect(DisconnectRequest) returns (DisconnectResponse) {}
  rpc Servers(ServersRequest) returns (ServersResponse) {}
}

message BalancerSetRequest {
  string key = 1;
  string value = 2;
  int32 server = 3;
  bool uniques = 4;
}

message BalancerSetToAreaRequest {
  string key = 1;
  string value = 2;
  int32 server = 3;
  bool uniques = 4;
  string area = 5;
}

message BalancerGetRequest {
  string key = 1;
  int32 server = 2;
}

message BalancerGetFromAreaRequest {
  string key = 1;
  int32 server = 2;
  string area = 3;
}

message ConnectRequest {
  string Address = 1;
  uint64 Total = 2;
  uint64 Available = 3;
  int32 server = 4;
}

message NewAreaRequest {
  string name = 1;
//  string defaultAttributes = 2;
}

message DisconnectRequest{
  int32 serverNumber = 1;
}

message ServersRequest{ }

message BalancerGetResponse {
  string value = 1;
}

message BalancerSetResponse {
  int32 savedTo = 1;
}

message ConnectResponse {
  string status = 1;
  int32 serverNumber = 2;
}

message DisconnectResponse{ }

message NewAreaResponse{ }

message ServersResponse {
  string serversInfo = 1;
}