syntax = "proto3";

option go_package = "../api";

package api;

service ItisaDB {
  rpc Set(SetRequest) returns (SetResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  rpc DeleteIfExists(DeleteRequest) returns (DeleteResponse) {}

  rpc NewObject(NewObjectRequest) returns (NewObjectResponse) {}
  rpc Object(ObjectRequest) returns (ObjectResponse) {}
  rpc SetToObject(SetToObjectRequest) returns (SetToObjectResponse) {}
  rpc GetFromObject(GetFromObjectRequest) returns (GetFromObjectResponse) {}
  rpc AttachToObject(AttachToObjectRequest) returns (AttachToObjectResponse) {}
  rpc ObjectToJSON(ObjectToJSONRequest) returns (ObjectToJSONResponse) {}
  rpc IsObject(IsObjectRequest) returns (IsObjectResponse) {}
  rpc Size(ObjectSizeRequest) returns (ObjectSizeResponse) {}
  rpc DeleteObject(DeleteObjectRequest) returns (DeleteObjectResponse) {}
  rpc DeleteAttr(DeleteAttrRequest) returns (DeleteAttrResponse) {}

  rpc Authenticate(AuthRequest) returns (AuthResponse) {}
  rpc Connect(ConnectRequest) returns (ConnectResponse) {}
  rpc Disconnect(DisconnectRequest) returns (DisconnectResponse) {}
  rpc Servers(ServersRequest) returns (ServersResponse) {}
  rpc GetRam(GetRamRequest) returns (GetRamResponse) {}
}

/*

   MODELS

 */


message Ram {
  uint64 Total = 2;
  uint64 Available = 3;
}

/*

   REQUESTS

 */

message SetRequest {
  optional int32 server = 1;
  string key = 2;
  string value = 3;
  bool uniques = 4;
}


message NewObjectRequest {
  optional int32 server = 1;
  string name = 2;
}

message ObjectSizeRequest {
  optional int32 server = 1;
  string name = 2;
}

message ObjectToJSONRequest {
  optional int32 server = 1;
  string name = 2;
}

message DeleteRequest {
  optional int32 server = 1;
  string key = 2;
}

message DeleteObjectRequest {
  optional int32 server = 1;
  string object = 2;
}

message GetToObjectRequest {
  optional int32 server = 1;
  string key = 2;
  string name = 3;
}

message SetToObjectRequest {
  optional int32 server = 1;
  string key = 2;
  string value = 3;
  bool uniques = 4;
  string object = 5;
}

message AttachToObjectRequest {
  optional int32 server = 1;
  string dst = 2;
  string src = 3;
}

message GetRequest {
  optional int32 server = 1;
  string key = 2;
}

message DeleteAttrRequest {
  optional int32 server = 1;
  string key = 2;
  string object = 3;
}

message GetFromObjectRequest {
  optional int32 server = 1;
  string key = 2;
  string object = 3;
}

message ConnectRequest {
  optional int32 server = 1;
  string Address = 2;
  uint64 Total = 3;
  uint64 Available = 4;
}

message ObjectRequest {
  optional int32 server = 1;
  string name = 2;
//  string defaultAttributes = 2;
}


message IsObjectRequest {
  optional int32 server = 1;
  string name = 2;
}

message DisconnectRequest{
  int32 server = 1;
}

message ServersRequest{ }

message AuthRequest {
  string login = 1;
  string password = 2;
}

message GetRamRequest {
}


/*

   RESPONSES

 */

message GetResponse {
  string value = 1;
}

message NewObjectResponse {
  string name = 1;
}


message IsObjectResponse {
  bool ok = 1;
}

message ObjectToJSONResponse {
  string object = 1;
}

message SetResponse {
  int32 savedTo = 1;
}

message ConnectResponse {
  string status = 1;
  int32 server = 2;
}

message AttachToObjectResponse {
}

message DeleteResponse {
}
message DeleteAttrResponse {
}

message DisconnectResponse{
}

message SetToObjectResponse {
  int32 savedTo = 1;
}

message ObjectSizeResponse {
  uint64 size = 1;
}

message GetFromObjectResponse {
  string value = 1;
}

message ObjectResponse{
}

message DeleteObjectResponse{
}

message ServersResponse {
  string serversInfo = 1;
}

message AuthResponse {
  string token = 1;
}

message GetRamResponse {
  Ram ram = 1;
}